--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </h1>
     </header>
     <nav>
-        <a href="index.html">HOME ALONE</a> &nbsp
+        <a href="index.html">HOME</a> &nbsp
         <a href="about.html">ABOUT</a> &nbsp
         <a href="event.html">EVENTS</a>&nbsp
         <a href="contact.html">CONTACT</a>&nbsp
