--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bootstrap Example</title>
+    <title>Website Name</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -13,57 +13,95 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top ">
-        <a class="navbar-brand" href="#nav" style="padding:0 15px 0 10px">Logo</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <div class="container-fluid" style=" height:250px ">
+        <h1>
+            WEBSITE NAME/stock image
+        </h1>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top ">
+        <a class="navbar-brand " href="#nav " style="padding:0 15px 0 10px ">Logo</a>
+        <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarNavDropdown " aria-controls="navbarNavDropdown " aria-expanded="false " aria-label="Toggle navigation ">
+        <span class="navbar-toggler-icon "></span>
       </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <div class="collapse navbar-collapse " id="navbarNavDropdown ">
+            <ul class="navbar-nav mr-auto ">
+                <li class="nav-item active ">
+                    <a class="nav-link " href="index.html ">Home <span class="sr-only ">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                <li class="nav-item ">
+                    <a class="nav-link " href="about.html ">About</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="event.html">Events</a>
+                <li class="nav-item ">
+                    <a class="nav-link " href="event.html ">Events</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contacts</a>
+                <li class="nav-item ">
+                    <a class="nav-link " href="contact.html ">Contacts</a>
                 </li>
             </ul>
             <ul class=" navbar-nav ml-auto ">
-                <li class="dropdown">
-                    <a class="dropdown nav-link" data-toggle="dropdown" href="#">
+                <li class="dropdown ">
+                    <a class="dropdown nav-link " data-toggle="dropdown " href="# ">
                     Login 
-                    <svg class="bi bi-box-arrow-in-left" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                      <path fill-rule="evenodd" d="M7.854 11.354a.5.5 0 000-.708L5.207 8l2.647-2.646a.5.5 0 10-.708-.708l-3 3a.5.5 0 000 .708l3 3a.5.5 0 00.708 0z" clip-rule="evenodd"/>
-                      <path fill-rule="evenodd" d="M15 8a.5.5 0 00-.5-.5h-9a.5.5 0 000 1h9A.5.5 0 0015 8z" clip-rule="evenodd"/>
-                      <path fill-rule="evenodd" d="M2.5 14.5A1.5 1.5 0 011 13V3a1.5 1.5 0 011.5-1.5h8A1.5 1.5 0 0112 3v1.5a.5.5 0 01-1 0V3a.5.5 0 00-.5-.5h-8A.5.5 0 002 3v10a.5.5 0 00.5.5h8a.5.5 0 00.5-.5v-1.5a.5.5 0 011 0V13a1.5 1.5 0 01-1.5 1.5h-8z" clip-rule="evenodd"/>
+                    <svg class="bi bi-box-arrow-in-left " width="1em " height="1em " viewBox="0 0 16 16 " fill="currentColor " xmlns="http://www.w3.org/2000/svg ">
+                      <path fill-rule="evenodd " d="M7.854 11.354a.5.5 0 000-.708L5.207 8l2.647-2.646a.5.5 0 10-.708-.708l-3 3a.5.5 0 000 .708l3 3a.5.5 0 00.708 0z " clip-rule="evenodd "/>
+                      <path fill-rule="evenodd " d="M15 8a.5.5 0 00-.5-.5h-9a.5.5 0 000 1h9A.5.5 0 0015 8z " clip-rule="evenodd "/>
+                      <path fill-rule="evenodd " d="M2.5 14.5A1.5 1.5 0 011 13V3a1.5 1.5 0 011.5-1.5h8A1.5 1.5 0 0112 3v1.5a.5.5 0 01-1 0V3a.5.5 0 00-.5-.5h-8A.5.5 0 002 3v10a.5.5 0 00.5.5h8a.5.5 0 00.5-.5v-1.5a.5.5 0 011 0V13a1.5 1.5 0 01-1.5 1.5h-8z
+        " clip-rule="evenodd "/>
                     </svg>
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <form class="px-4 py-3">
-                            <div class="form-group">
-                                <label for="exampleDropdownFormEmail1">Email address</label>
-                                <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
+                    <div class="dropdown-menu dropdown-menu-right ">
+                        <form class="px-4 py-3 ">
+                            <div class="form-group ">
+                                <label for="exampleDropdownFormEmail1 ">Email address</label>
+                                <input type="email " class="form-control " id="exampleDropdownFormEmail1 " placeholder="email@example.com ">
                             </div>
-                            <div class="form-group">
-                                <label for="exampleDropdownFormPassword1">Password</label>
-                                <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
+                            <div class="form-group ">
+                                <label for="exampleDropdownFormPassword1 ">Password</label>
+                                <input type="password " class="form-control " id="exampleDropdownFormPassword1 " placeholder="Password ">
                             </div>
 
-                            <button type="submit" class="btn btn-primary">Sign in</button>
+                            <button type="submit " class="btn btn-primary ">Sign in</button>
                         </form>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">New around here? Sign up</a>
-                        <a class="dropdown-item" href="#">Forgot password?</a>
+                        <div class="dropdown-divider "></div>
+                        <a class="dropdown-item " href="# ">New around here? Sign up</a>
+                        <a class="dropdown-item " href="# ">Forgot password?</a>
                     </div>
                 </li>
             </ul>
         </div>
     </nav>
+
+    <div class="container-fluid col-lg-10 ">
+        <h1 class=" " style="padding-top: 10px; ">
+            Some text
+        </h1>
+        <p class="lead ">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt. Sapien et ligula ullamcorper malesuada proin libero nunc consequat
+            interdum. Lacinia at quis risus sed. Pharetra et ultrices neque ornare aenean euismod elementum nisi. Non tellus orci ac auctor. Ullamcorper a lacus vestibulum sed. Cursus risus at ultrices mi tempus. Est ullamcorper eget nulla facilisi etiam
+            dignissim. Commodo elit at imperdiet dui accumsan sit amet. Amet facilisis magna etiam tempor orci eu lobortis. Ipsum a arcu cursus vitae congue. Aliquet eget sit amet tellus cras adipiscing enim eu. Pellentesque eu tincidunt tortor aliquam
+            nulla facilisi cras. Ultricies integer quis auctor elit sed vulputate. Vitae purus faucibus ornare suspendisse sed nisi lacus. Pellentesque habitant morbi tristique senectus. Amet nulla facilisi morbi tempus iaculis. Augue ut lectus arcu bibendum
+            at varius vel. Nunc eget lorem dolor sed. Donec ac odio tempor orci dapibus ultrices. Eros donec ac odio tempor orci dapibus ultrices in iaculis. Sagittis eu volutpat odio facilisis mauris sit amet massa. In arcu cursus euismod quis viverra
+            nibh. Ultrices sagittis orci a scelerisque purus semper eget. Fermentum posuere urna nec tincidunt. Volutpat odio facilisis mauris sit amet massa vitae tortor condimentum. Aliquam id diam maecenas ultricies mi eget mauris pharetra et. Malesuada
+            pellentesque elit eget gravida cum sociis natoque penatibus et. Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Morbi leo urna molestie at. Sit amet venenatis urna cursus eget nunc. Cras fermentum odio eu feugiat pretium nibh
+            ipsum. Orci nulla pellentesque dignissim enim sit amet venenatis urna. Amet nisl purus in mollis. Eget lorem dolor sed viverra. Pretium lectus quam id leo. Adipiscing elit duis tristique sollicitudin nibh. Diam ut venenatis tellus in metus.
+            Urna nec tincidunt praesent semper feugiat nibh sed pulvinar proin. Tristique nulla aliquet enim tortor at auctor urna nunc. Sapien pellentesque habitant morbi tristique senectus et netus et malesuada. Molestie nunc non blandit massa enim.
+            Dui faucibus in ornare quam viverra orci. Ut consequat semper viverra nam libero justo laoreet sit amet. Purus gravida quis blandit turpis cursus. In ante metus dictum at tempor commodo. Adipiscing elit pellentesque habitant morbi tristique
+            senectus et netus. Pharetra magna ac placerat vestibulum lectus mauris.
+        </p>
+        <p class="lead ">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt. Sapien et ligula ullamcorper malesuada proin libero nunc consequat
+            interdum. Lacinia at quis risus sed. Pharetra et ultrices neque ornare aenean euismod elementum nisi. Non tellus orci ac auctor. Ullamcorper a lacus vestibulum sed. Cursus risus at ultrices mi tempus. Est ullamcorper eget nulla facilisi etiam
+            dignissim. Commodo elit at imperdiet dui accumsan sit amet. Amet facilisis magna etiam tempor orci eu lobortis. Ipsum a arcu cursus vitae congue. Aliquet eget sit amet tellus cras adipiscing enim eu. Pellentesque eu tincidunt tortor aliquam
+            nulla facilisi cras. Ultricies integer quis auctor elit sed vulputate. Vitae purus faucibus ornare suspendisse sed nisi lacus. Pellentesque habitant morbi tristique senectus. Amet nulla facilisi morbi tempus iaculis. Augue ut lectus arcu bibendum
+            at varius vel. Nunc eget lorem dolor sed. Donec ac odio tempor orci dapibus ultrices. Eros donec ac odio tempor orci dapibus ultrices in iaculis. Sagittis eu volutpat odio facilisis mauris sit amet massa. In arcu cursus euismod quis viverra
+            nibh. Ultrices sagittis orci a scelerisque purus semper eget. Fermentum posuere urna nec tincidunt. Volutpat odio facilisis mauris sit amet massa vitae tortor condimentum. Aliquam id diam maecenas ultricies mi eget mauris pharetra et. Malesuada
+            pellentesque elit eget gravida cum sociis natoque penatibus et. Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Morbi leo urna molestie at. Sit amet venenatis urna cursus eget nunc. Cras fermentum odio eu feugiat pretium nibh
+            ipsum. Orci nulla pellentesque dignissim enim sit amet venenatis urna. Amet nisl purus in mollis. Eget lorem dolor sed viverra. Pretium lectus quam id leo. Adipiscing elit duis tristique sollicitudin nibh. Diam ut venenatis tellus in metus.
+            Urna nec tincidunt praesent semper feugiat nibh sed pulvinar proin. Tristique nulla aliquet enim tortor at auctor urna nunc. Sapien pellentesque habitant morbi tristique senectus et netus et malesuada. Molestie nunc non blandit massa enim.
+            Dui faucibus in ornare quam viverra orci. Ut consequat semper viverra nam libero justo laoreet sit amet. Purus gravida quis blandit turpis cursus. In ante metus dictum at tempor commodo. Adipiscing elit pellentesque habitant morbi tristique
+            senectus et netus. Pharetra magna ac placerat vestibulum lectus mauris.
+        </p>
+    </div>
 
 
 </body>
