--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
-<body class="loginPage">
+<body>
     <nav>
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
