--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="event.html">EVENTS</a>
             </li>
             <li>
-                <a href="contact.html">CONTACT</a>
+                <a href="ourTeam.html">Our Team</a>
             </li>
             <li>
                 <a href="login.html">LOGIN</a>
