--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
                 <a href="event.html">EVENTS</a>
             </li>
             <li>
-                <a href="contact.html">CONTACT</a>
+                <a href="ourTeam.html">Our Team</a>
             </li>
             <li>
                 <a class="active" href="login.html">LOGIN</a>
