--- a/login.html
+++ b/login.html
@@ -54,11 +54,11 @@
                     <label>Password</label>
                 </div>
                 <div class="pass">
-                    Forgot Password?
+                    <a href=""> Forgot Password?</a>
                 </div>
                 <input type="submit" value="Login">
                 <div class="signup_link">
-                    Not a member? <a href="#">Signup</a>
+                    Not a member? <a href="signup.html">Signup</a>
                 </div>
 
             </form>
