--- a/ourTeam.html
+++ b/ourTeam.html
@@ -15,28 +15,34 @@
     <nav>
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
-            <i class="fas fa-bars">
-
-            </i>
+            <i class="fas fa-bars"></i>
         </label>
         <label class="logo">[WEBSITE LOGO]</label>
         <ul>
             <li>
-                <a href="index.html">HOME</a>
+                <a href="homepage.html">HOME</a>
             </li>
             <li>
-                <a href="about.html">ABOUT</a>
+                <a href="#">NOTIFICATION</a>
             </li>
             <li>
                 <a href="event.html">EVENTS</a>
             </li>
             <li>
-                <a class="active" href="ourTeam.html">Our Team</a>
+                <a href="rules.html">rules</a>
             </li>
             <li>
-                <a href="login.html">LOGIN</a>
+                <a href="ourTeam.html">Our Team</a>
             </li>
-
+            <li>
+                <a href="#">PROFILE</a>
+            </li>
+            <li>
+                <a class="active" href="#">LOGOUT</a>
+            </li>
+            <li>
+                <a class="active" href="login.html">LOG IN</a>
+            </li>
         </ul>
     </nav>
 
