--- a/signup.html
+++ b/signup.html
@@ -20,21 +20,29 @@
         <label class="logo">[WEBSITE LOGO]</label>
         <ul>
             <li>
-                <a href="index.html">HOME</a>
+                <a href="homepage.html">HOME</a>
             </li>
             <li>
-                <a href="about.html">ABOUT</a>
+                <a href="#">NOTIFICATION</a>
             </li>
             <li>
                 <a href="event.html">EVENTS</a>
             </li>
             <li>
+                <a href="rules.html">rules</a>
+            </li>
+            <li>
                 <a href="ourTeam.html">Our Team</a>
             </li>
             <li>
-                <a class="active" href="login.html">LOGIN</a>
+                <a href="#">PROFILE</a>
             </li>
-
+            <li>
+                <a class="active" href="#">LOGOUT</a>
+            </li>
+            <li>
+                <a class="active" href="login.html">LOG IN</a>
+            </li>
         </ul>
     </nav>
 
