--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/baseCSS.css">
     <link rel="stylesheet" type="text/css" href="css/homepage.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
@@ -58,13 +58,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="imgs/TH1.jpg" class="d-block w-100 h-250" alt="TH">
+                    <img src="imgs/TH1.jpg" class="d-block w-100 " alt="TH">
                 </div>
                 <div class="carousel-item">
-                    <img src="imgs/TH2.jpg" class="d-block w-100 h-250" alt="TH">
+                    <img src="imgs/TH2.jpg" class="d-block w-100 " alt="TH">
                 </div>
                 <div class="carousel-item">
-                    <img src="imgs/TH3.jpg" class="d-block w-100 h-250" alt="TH">
+                    <img src="imgs/TH3.jpg" class="d-block w-100 " alt="TH">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
