--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet " href="css/style.css " />
+    <link rel="stylesheet " href="css/baseCSS.css " />
     <link rel="stylesheet " href="css/signup.css " />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
