--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
                 <a href="ourTeam.html">Our Team</a>
             </li>
             <li>
-                <a href="#">PROFILE</a>
+                <a href="userProfile.html">PROFILE</a>
             </li>
             <li>
                 <a class="active" href="#">LOGOUT</a>
