--- a/ourTeam.html
+++ b/ourTeam.html
@@ -35,7 +35,7 @@
                 <a href="ourTeam.html">Our Team</a>
             </li>
             <li>
-                <a href="#">PROFILE</a>
+                <a href="userProfile.html">PROFILE</a>
             </li>
             <li>
                 <a class="active" href="#">LOGOUT</a>
@@ -51,7 +51,7 @@
             <h1>OUR TEAM</h1>
             <div class="card">
                 <div class="box">
-                    <img src="images/one.jpg" alt="member" height="200">
+                    <img src="imgs/teammate1.jpg" alt="member" height="200">
                     <h4>Name</h4>
                     <h5>Job Title</h5>
                     <p> Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor</p>
@@ -59,7 +59,7 @@
             </div>
             <div class="card">
                 <div class="box">
-                    <img src="images/two.jpg" alt="member" height="200">
+                    <img src="imgs/teammate2.jpg" alt="member" height="200">
                     <h4>Name</h4>
                     <h5>Job Title</h5>
                     <p> Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor</p>
@@ -67,7 +67,7 @@
             </div>
             <div class="card">
                 <div class="box">
-                    <img src="images/three.jpg" alt="member" height="200">
+                    <img src="imgs/teammate3.jpg" alt="member" height="200">
                     <h4>Name</h4>
                     <h5>Job Title</h5>
                     <p> Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor</p>
@@ -75,7 +75,7 @@
             </div>
             <div class="card">
                 <div class="box">
-                    <img src="images/four.jpg" alt="member" height="200">
+                    <img src="imgs/teammate4.jpg" alt="member" height="200">
                     <h4>Name</h4>
                     <h5>Job Title</h5>
                     <p> Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor</p>
@@ -83,7 +83,7 @@
             </div>
             <div class="card">
                 <div class="box">
-                    <img src="images/five.jpg" alt="member" height="200">
+                    <img src="imgs/teammate5.jpg" alt="member" height="200">
                     <h4>Name</h4>
                     <h5>Job Title</h5>
                     <p> Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor</p>
