--- a/eventDetails.html
+++ b/eventDetails.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet " href="css/baseCSS.css " />
-    <link rel="stylesheet " href="css/event1.css " />
+    <link rel="stylesheet " href="css/eventDetails.css " />
 
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
@@ -36,7 +36,7 @@
                 <a href="ourTeam.html">Our Team</a>
             </li>
             <li>
-                <a href="#">PROFILE</a>
+                <a href="userProfile.html">PROFILE</a>
             </li>
             <li>
                 <a class="active" href="#">LOGOUT</a>
