--- a/rules.html
+++ b/rules.html
@@ -34,7 +34,7 @@
                 <a href="ourTeam.html">Our Team</a>
             </li>
             <li>
-                <a href="#">PROFILE</a>
+                <a href="userProfile.html">PROFILE</a>
             </li>
             <li>
                 <a class="active" href="#">LOGOUT</a>
