updated some styling

--- a/ourTeam.html
+++ b/ourTeam.html
@@ -32,7 +32,7 @@
                 <a href="rules.html">rules</a>
             </li>
             <li>
-                <a href="ourTeam.html">Our Team</a>
+                <a class="active" href="ourTeam.html">Our Team</a>
             </li>
             <li>
                 <a href="userProfile.html">PROFILE</a>
