--- a/eventDetails.html
+++ b/eventDetails.html
@@ -21,7 +21,7 @@
         <label class="logo">[WEBSITE LOGO]</label>
         <ul>
             <li>
-                <a href="homepage.html">HOME</a>
+                <a class="active" href="homepage.html">HOME</a>
             </li>
             <li>
                 <a href="#">NOTIFICATION</a>
