--- a/eventDetails.html
+++ b/eventDetails.html
@@ -21,7 +21,7 @@
         <label class="logo">[WEBSITE LOGO]</label>
         <ul>
             <li>
-                <a class="active" href="homepage.html">HOME</a>
+                <a href="homepage.html">HOME</a>
             </li>
             <li>
                 <a href="#">NOTIFICATION</a>
@@ -48,9 +48,7 @@
     </nav>
     <main>
         <div class="header">
-            <!-- <h1>
-                this is [Event Name]'s details page
-            </h1> -->
+            <a href="event.html" class="back-btn">&laquo; Back</a>
             <form action="">
                 <input type="text" placeholder="Search for events...">
             </form>
